updated index.html open-source link

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
           </div>
         </div>
       </div>
+      <a href="https://github.com/kvillescaz/my-weather-app">Open-source code</a><p>By:Kaylyn Villescaz</p>
       <script src="src/index.js"></script>
       <script
         src="https://kit.fontawesome.com/ff1a35df0d.js"
